🎨 店名・内容フィルターが動作していなかったので修正
